# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "escl-scan"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"


# Profiles
[profile.dev]
opt-level = 1
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = false
codegen-units = 8
lto = false
incremental = true


[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
lto = true
debug = false


[dependencies]
reqwest = "0.9.24"
serde = "1.0.104"
serde_derive = "1.0.104"
serde-xml-rs = "0.3.1"