[workspace]
members = [
    "escl-scan",
    "escl-scan-cli",
]

# Profiles
[profile.dev]
opt-level = 1
overflow-checks = true
debug-assertions = true
panic = "abort"
codegen-units = 8
lto = false
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
debug-assertions = false
lto = true
debug = false