[package]
name = "escl-scan-cli"
version = "0.1.2"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["command-line-utilities"]
description = """
CLI for escl-scan
"""
edition = "2018"

[dependencies]
clap = "2.33.0"
scan = { package="escl-scan", version = "0.1.1", path="../escl-scan" }
