[package]
name = "escl-scan-cli"
version = "0.1.3"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["command-line-utilities"]
description = """
CLI for escl-scan
"""
edition = "2018"

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
scan = { package="escl-scan", path="../escl-scan" }
