[package]
name = "escl-scan-gui"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
gtk = { version = "0.8.0", features = ["v3_16"] }
gio = { version = "0.8.0", features = ["v2_44"] }
glib = "0.9.0"
scan = { package="escl-scan", version = "0.1.1", path="../escl-scan" }