[package]
name = "escl-scan"
version = "0.1.1"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/escl-scan"
readme = "README.md"
license = "GPL-3.0"
keywords = [
    "escl",
    "scan"
]
categories = ["api-bindings"]
description = """
A library for scanning documents over LAN or Wi-Fi using eSCL protocol.
"""
edition = "2018"

[dependencies]
reqwest = "0.10.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde-xml-rs = "0.3.1"
