[package]
name = "escl-scan"
version = "0.1.1"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/escl-scan"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "escl",
    "scan"
]
categories = ["api-bindings"]
description = """
A library for scanning documents over LAN or Wi-Fi using eSCL protocol.
"""
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0.106", features = ["derive"] }
serde-xml-rs = "0.4.0"
